<resources>
    <!--  Strings generales para toda la App  -->
    <string name="app_name">Huellitas Aventureras</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_profile">Perfil</string>
    <string name="title_edit_profile">Editar Perfil</string>
    <string name="title_add_pet">Registrar Mascota</string>
    <string name="title_ride_details">Detalles</string>
    <string name="title_payment">Tarjetas y Cuentas</string>
    <string name="title_ride_request">Solicitar Servicio</string>
    <string name="cancel">Cancelar</string>
    <string name="finish">Finalizar</string>
    <string name="register">Registrarse</string>
    <string name="login">Iniciar Sesión</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="accept">Aceptar</string>
    <string name="reject">Rechazar</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="payment_method">Método de %1$s</string><!--preguntar-->
    <string name="select_media_app">Selecciona su galería</string>

    <!--  RegisterFragment & EditProfileFragment -->
    <string name="name_hint">Nombre</string>
    <string name="gender_hint">Género</string>
    <string name="age_hint">Edad</string>
    <string name="phone_hint">Teléfono</string>
    <string name="address_hint">Dirección</string>
    <string name="mail_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="repeat_password_hint">Repetir contraseña</string>
    <string name="user_type_hint">Tipo de usuario</string>
    <string name="mexico_prefix">+52</string>
    <string name="not_loged">No se ha podido iniciar sesión.</string>
    <string name="not_registered">No se ha podido registrar el usuario.</string>
    <string-array name="genders">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>
    <string-array name="user_types">
        <item>Cliente</item>
        <item>Paseador</item>
    </string-array>

    <!--  LoginFragment  -->
    <string name="keep_loged">Mantener sesión iniciada.</string>
    <string name="or">ó</string>
    <string name="no_mail">Debe introducir un correo</string>
    <string name="no_password">Debe introducir una contraseña</string>

    <!-- ProfileFragment -->
    <string name="pets_title">Tus mascotas</string>
    <string name="rides_title">Paseos completados</string>
    <string name="add_pet">Agregar mascota</string>

    <!--RideDetailsFragment-->
    <string name="client_title">Cliente</string>
    <string name="pet_title">Mascota</string>
    <string name="race_hint">Raza</string>
    <string name="time_hint">Tiempo de paseo</string>

    <!-- AddPetFragment -->
    <string name="date_pet_hint">Fecha de nacimiento</string><!--Cambio-->
    <string-array name="races">
        <item>Husky siberiano</item>
        <item>Golden retriever</item>
        <item>Caniche</item>
        <item>Pastor alemán</item>
        <item>Yorkshire terrier</item>
        <item>Dálmata</item>
        <item>Bóxer</item>
        <item>Chihuahua</item>
        <item>Bulldog inglés</item>
        <item>Beagle</item>
        <item>Schnauzer</item>
        <item>Otro</item>
    </string-array>
    <string name="other_race">Otra raza</string>

    <!-- RideRequestClientFragment -->
    <string name="walker_hint">Seleccione un paseador</string>
    <string name="pets_hint">Seleccione una mascota</string>
    <string name="time_select_hint">Seleccione la duración del paseo</string>
    <string name="request_ride">Solicitar paseo</string>
    <string-array name="Employees">
        <item>---</item>
        <item>---</item>
    </string-array>
    <string-array name="Pets">
        <item>---</item>
        <item>---</item>
    </string-array>
    <string-array name="Times">
        <item>30 Mint</item>
        <item>45 Mint</item>
        <item>60 Mint</item>
        <item>75 Mint</item>
        <item>90 Mint</item>
        <item>105 Mint</item>
        <item>120 Mint</item>
        <item>135 Mint</item>
        <item>150 Mint</item>
        <item>165 Mint</item>
        <item>180 Mint</item>
    </string-array>
  
    <!-- PaymentFormatFragment -->
    <string name="card_owner_hint">Titular de la cuenta</string>
    <string name="identifier_type_hint">Tipo de identificador</string><!-- cambio -->
    <string name="bank_acount_identifier_hint">Identificador de la cuenta</string>
    <string name="identifier_hint">Introducir %1$s</string>
    <string name="cvv_hint">CVV</string>
    <string-array name="CardDetails">
        <item>CLABE</item>
        <item>Número de tarjeta</item>
        <item>Número de cuenta</item>
    </string-array>

    <!--  HomeFragment  -->
    <string name="ongoing_rides_title">Paseos en curso</string>
    <string name="pending_rides_title">Paseos en solicitud</string>


    <!--  Tablas de la BD  -->
    <string name="USUARIOS_TABLE">Usuarios</string>
    <string name="FOTO_USUARIO">Foto_Usuario</string>
    <string name="ID_USUARIO">ID_Usuario</string>
    <string name="NOMBRE_USUARIO">Nombre</string>
    <string name="GENERO_USUARIO">Genero</string>
    <string name="EDAD_USUARIO">Edad</string>
    <string name="TELEFONO_USUARIO">Numero_Telefonico</string>
    <string name="DOMICILIO_USUARIO">Domicilio</string>
    <string name="EMAIL_USUARIO">Correo_Electronico</string>
    <string name="TIPO_USUARIO">Tipo_Usuario</string>
    <string name="MASCOTAS_USUARIO">Mascotas_Alta</string>
    <string name="CAPACITACION_USUARIO">Capacitacion</string>
    <string name="METODO_PAGO_COBRO">Metodo_Pago_Cobro</string>


    <!--  RclrItemPet  -->
    <string name="namePet_hint">Nombre de la mascota</string>

    <!--  RclrItemRide  -->
    <string name="nameUser_hint">Nombre del usuario</string>
    <string name="time">Tiempo</string>

    <!--  Archivos .java  -->
    <!--  AddPetFragment  -->
    <string name="other">Otro</string>
    <string name="succefull_register">Registro Exitoso. Reinicie la aplicación.</string>
    <string name="registry_error">Fallo en el Registro.</string>
    <string name="incomplete_fields">Campos incompletos.</string>

    <!--  HomeFragment  -->
    <string name="ID_PASEADOR">ID_Paseador</string>
    <string name="Duracion_Paseo">Duracion_Paseo</string>
    <string name="Estado">Estado</string>
    <string name="Walker">Paseador</string>

    <!-- AddPetFragment -->
    <string name="retry">Intentelo de nuevo</string>


    <!--  PaymentFormatFragment  -->
    <string name="succefull_register_payment">Registro Exitoso.</string>
    <string name="payment_type">Tipo de pago</string>
    <string name="number">Numero</string>

    <!-- ProfileFragment -->
    <string name="photo_user">Foto_Usuario</string>
    <string name="notification">No es posible cargar los datos del usuario en este momento.</string>
    <string name="date">Fecha</string>
    <string name="ID_Cliente">ID_Cliente</string>
    <string name="ADD_PET">ADD_PET</string>
    <string name="EDIT_PET">EDIT_PET</string>

    <!--RideDetailsFragment-->
    <string name="Rides">Paseos</string>

    <!--RideRequestClientFragment-->
    <string name="succefull_register_ride">Registro de paseo exitoso</string>
    <string name="fail_register_ride">No se pudo realizar el registro del paseo</string>
    <string name="TRY_AGAIN">Intentelo de nuevo más tarde.</string>

</resources>