<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RideDetailsFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/txtViewUser"
        style="@style/BaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:text="@string/client_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtlytName"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtlytName"
        style="@style/BaseOutlinedTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"><!-- mismo que register -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtlytAddress"
        style="@style/BaseOutlinedTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_hint"><!-- mismo que register -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txtViewPet"
        style="@style/BaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:text="@string/pet_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtlytPetName"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtlytPetName"
        style="@style/BaseOutlinedTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPetName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtlyPetfecha"
        style="@style/BaseOutlinedTextInput"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/age_hint"><!-- mismo que register -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPetfecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtlytRace"
        style="@style/BaseOutlinedTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/race_hint"><!-- cambio -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtRace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtlytTime"
        style="@style/BaseOutlinedTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bttnFinish"/><!-- de generales -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttnReject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/reject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/><!-- de generales -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bttnReject"/><!-- de generales -->

    </androidx.constraintlayout.widget.ConstraintLayout>