<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddPetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtlytPetName"
            style="@style/BaseOutlinedTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPetName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtlyPetfecha"
            style="@style/BaseOutlinedTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_pet_hint"><!--Cambio-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPetfecha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtlytRace"
            style="@style/BaseDropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/race_hint"><!--Cambio-->

            <AutoCompleteTextView
                android:id="@+id/txtRace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtlytOtherRace"
            style="@style/BaseOutlinedTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/other_race"><!--Cambio-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtOtherRace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttnCancelPetRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttnPetRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bttnCancelPetRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>